<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/serverText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serverText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:text="@string/serverPlaceText" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="top" />

        <TextView
            android:id="@+id/portText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@string/portPlaceText" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="top" />

        <TextView
            android:id="@+id/mailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mailText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:text="" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="top" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text="" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendTextBtn" />

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>